make a bind-mount version
Start the container, then exec into it like this:

docker container exec -it r-source c:\msys64\usr\bin\bash -li

Confirmed that `make distribution` completes successfully.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,13 @@
 services:
-  r-source:
+  r-source-build-all:
     build:
       context: .
-    # volumes:
-    #   - .:c:\src
-
-    
+      dockerfile: build-all.Dockerfile
+  r-source-bind:
+    build:
+      context: .
+      dockerfile: bind.Dockerfile
+    volumes:
+      - type: bind
+        source: .
+        target: c:\src
